# gemini-bridge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  plan.md  pyproject.toml  repo-init.md  setup.sh
.github/workflows/: dependency-review.yml  semgrep.yml  trivy.yml
docs/: README.md  architecture.md  auth.md  configuration.md  development.md  logging.md  roadmap.md  tools.md  transcripts.md
docs/solid-reviews/: 20260702-203000-SOLID-review-issue-14-16-keychain-env-auth.md
src/gemini_bridge/: __init__.py  __main__.py  auth.py  client.py  config.py  models.py  server.py  transcript.py
src/gemini_bridge/tools/: __init__.py  architect.py  ask.py  base.py  brainstorm.py  debug.py  list_models.py  review.py
tests/: test_auth.py  test_client.py  test_config.py  test_list_models.py  test_models.py  test_tools.py  test_transcript.py
