[project]
name = "gemini-bridge"
version = "26.7.1"
description = "MCP server giving Claude Code a live Gemini counterpart via Vertex AI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28,<2",
    "google-genai>=1.34",
    "google-auth>=2.0",
    "pydantic>=2.0",
]

[project.scripts]
gemini-bridge = "gemini_bridge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_bridge"]

[tool.bandit]
skips = ["B101"]
severity = "medium"
confidence = "medium"
exclude_dirs = [".venv", "venv", "env", "__pycache__", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = false
